--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -6,6 +6,14 @@
     android:background="@color/colorBoardPage"
     tools:context=".NoticeFragment">
 
+    <Button
+        android:id="@+id/btn_board_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add"
+        android:visibility="gone">
+    </Button>
+
     <ListView
         android:id="@+id/lv_boards"
         android:layout_width="match_parent"
